<resources>
    <string name="app_name">Manillas</string>
    <string name="manillas_xzy">MANILLAS XYZ</string>
    <string name="material">Material</string>
    <string name="dije">Dije</string>
    <string name="tipo">Tipo</string>
    <string name="cuerda">Cuerda</string>
    <string name="martillo">Martillo</string>
    <string name="ancla">Ancla</string>
    <string name="oro_oro_rosado">Oro, Oro Rosado</string>
    <string name="niquel">Niquel</string>
    <string name="plata">Plata</string>
    <string name="cuero">Cuero</string>
    <string name="selecionar_moneda">Seleccione una modeda</string>
    <string name="cantidad">Cantidad</string>
    <string name="total_pagar">Total a pagar</string>
    <string name="resultado">Resultado</string>
    <string name="calcular">Calcular valor</string>
    <string name="dolarusd">Dolar (USD)</string>
    <string name="pesocop">Peso (COD)</string>
    <string name="ingrese_cantidad">Ingrese cantidad</string>

    <string-array name="monedas">
        <item>@string/dolarusd</item>
        <item>@string/pesocop</item>
    </string-array>

    <string-array name="cantidades">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
