<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20sp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/manillas_xzy"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtMaterial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/material" />

    <RadioGroup
        android:id="@+id/rdgMaterial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rdCuero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cuero" />

        <RadioButton
            android:id="@+id/rdCuerda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cuerda" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="@string/dije" />

    <RadioGroup
        android:id="@+id/rdgDije"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rdMartillo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/martillo" />

        <RadioButton
            android:id="@+id/rdAncla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ancla" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="@string/tipo" />

    <RadioGroup
        android:id="@+id/rdgTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rdOro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oro_oro_rosado" />

        <RadioButton
            android:id="@+id/rdNiquel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/niquel" />

        <RadioButton
            android:id="@+id/rdPlata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plata" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtSeleccionarMoneda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selecionar_moneda" />

            <Spinner
                android:id="@+id/cmbMoneda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtCantidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cantidad" />

            <EditText
                android:id="@+id/txtcantidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ingrese_cantidad"
                android:inputType="textPersonName"
                android:textColor="#8E8585"
                android:textStyle="italic" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:onClick="calcular"
        android:text="@string/calcular" />

    <TextView
        android:id="@+id/txtLabelTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:text="@string/total_pagar"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        android:textColor="#2A000000"
        android:textSize="32sp"
        android:textStyle="bold|italic" />

</LinearLayout>